# disnake-ext-plugins

./: .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml
examples/: attributes.py  basic.py  checks.py  extras.py  hooks.py  loop.py  main.py  plugin_keys.py  typed.py
scripts/: __init__.py  symlink.py
src/disnake/ext/plugins/: __init__.py  context.py  placeholder.py  plugin.py  typeshed.py  utilities.py  utils.py
src/disnake_plugins/: __init__.py  async_utils.py  plugin.py
