[tool.poetry]
name = "disnake-ext-plugins"
version = "0.2.4"
description = "An extension for disnake providing a robust alternative to cogs."
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "disnake/ext/plugins", from="src"}]
repository = "https://github.com/Chromosomologist/disnake-ext-plugins"
keywords = [
    "disnake",
    "disnake.ext",
    "discord",
    "cogs",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.0"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
taskipy = "^1.10.1"

black="~22.8.0"
isort="~5.10.1"
pyright="~1.1.272"
slotscheck="~0.15.0"

flake8 = "~5.0.4"
flake8-bandit= "~4.1.1"
flake8-bugbear = "~22.9.23"
flake8-comprehensions = "~3.10.0"
flake8-noqa = "~1.2.9"
flake8-pytest-style = "~1.6.0"

[tool.poetry.scripts]
dev-symlink = "scripts.symlink:_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.8"
include = ["src/disnake/ext/plugins"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportImportCycles = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = true
skip="examples"
